# HRD-wheel

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: mvp-api.md  overall-architecture.md
frontend/: package.json
gateway/: main.py
gateway/api/: routes.py
gateway/mock/: data.py
gateway/robot_adapter/: base_adapter.py
gateway/schemas/: models.py
gateway/services/: bridge.py
gateway/ws/: endpoints.py
gateway_agent/: README.md  gateway_context_service.py  main.py  pyproject.toml  security.py
gateway_agent/api/: routes.py
gateway_agent/mosquitto/: mosquitto.auth.conf  mosquitto.dev.conf
gateway_agent/robot_services/: __init__.py
gateway_agent/ws/: endpoints.py
mvp/: README.md
robot_agent/: README.md  package.xml  setup.py
robot_agent/robot_agent/: capture_agent_node.py
robot_agent/scripts/: run_robot_agent.py
robot_gateway/: README.md  SKILL.md  docker-compose.yml  pyproject.toml  requirements.txt
robot_gateway/agents/: openai.yaml
robot_gateway/app/: config.py  main.py  models.py  run_store.py  snapshot.py
robot_gateway/app/adapters/: base.py  mock_adapter.py
robot_gateway/app/skills/: capture_image.py  move_to.py
robot_gateway/app/webrtc/: manager.py  ros_source.py  tracks.py
robot_gateway/deploy/docker/: Dockerfile.bridge
robot_gateway/references/: codebase-map.md  robot-gateway-mvp.md
robot_gateway/scripts/: run_robot_mqtt_agent_stub.py
robot_gateway/static/: webrtc_debug.html
robot_gateway/tests/: test_api.py
robot_interfaces/: README.md
web_fronted/: package-lock.json  tsconfig.json
(+67 files in other folders)
