<?xml version="1.0"?>
<package format="3">
  <name>robot_agent</name>
  <version>0.1.0</version>
  <description>ROS2 robot agent with MQTT bridge for robot_gateway capture_image skill.</description>
  <maintainer email="dev@example.com">robot-agent</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>

  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-paho-mqtt</exec_depend>
  <exec_depend>realsense2_camera</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
